# InferX

./: README.md
InferX/: .dockerignore  .env.example  .gitignore  Dockerfile  bench-results.md  docker-compose.yml  pyproject.toml
InferX/alembic/: env.py
InferX/alembic/versions/: 0001_create_auth_usage_tables.py
InferX/app/: __init__.py  main.py
InferX/app/api/: dashboard.py
InferX/app/api/v1/: analytics.py  demo.py  health.py  (+1 more)
InferX/app/cache/: __init__.py  embedding.py  redis_cache.py
InferX/app/core/: config.py  errors.py  telemetry.py
InferX/app/db/: models.py  session.py
InferX/app/metrics/: prometheus.py
InferX/app/providers/: __init__.py  base.py  registry.py
InferX/app/rate_limit/: __init__.py  limiter.py
InferX/app/routing/: __init__.py  circuit_breaker.py  provider_scoring.py  queue.py  router.py
InferX/app/schemas/: analytics.py  inference.py  providers.py
InferX/app/services/: auth.py  cost_analytics.py  dashboard_analytics.py  inference.py  pricing.py  usage.py
InferX/docs/: live-failover-demo.md  roadmap.md
InferX/load-tests/: locustfile.py
InferX/ops/prometheus/: prometheus.yml
InferX/scripts/: render_cost_savings.py  start_api.sh
InferX/tests/: conftest.py
InferX/tests/integration/: test_analytics_api.py  test_dashboard_api.py  test_generate_api.py  test_health_api.py
InferX/tests/unit/: test_auth.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_cost_analytics.py  test_demo_provider.py  test_pricing.py  test_provider_registry.py  test_provider_scoring.py  test_queue.py  test_routing_failover.py
(+7 files in other folders)
